--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@google-cloud/speech": "^6.7.0",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "node-microphone": "^0.1.6",
     "node-record-lpcm16": "^1.0.1",
-    "openai": "^4.58.1"
+    "openai": "^4.58.1",
+    "socket.io": "^4.7.5"
   }
 }
